finish testcase nopcomerce 56

--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,14 @@
             <version>${aspectj.version}</version>
             <scope>runtime</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.aeonbits.owner/owner -->
+        <dependency>
+            <groupId>org.aeonbits.owner</groupId>
+            <artifactId>owner</artifactId>
+            <version>1.0.10</version>
+        </dependency>
+
     </dependencies>
 
     <!-- Compiler/ Run Test -->
